--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,13 @@
-<p>user works!</p>
+<div class="mainContainer">
+  <div class="userInfoContainer">
+    <div class="avator">
+      1
+    </div>
+    <div class="userInfo">
+
+    </div>
+  </div>
+  <div class="blogListContainer">
+    2
+  </div>
+</div>
