feat(home): 初始化广场页
展示所有拉取到的公开内容

设置了单击标题跳转到详情页的路由

todo: 按照时间顺序展示，用户 hover 详情，调整样式

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,45 @@
-<p>home works!</p>
+<div class="layout">
+  <div class="layout-content">
+    <nz-breadcrumb>
+      <nz-breadcrumb-item>Home</nz-breadcrumb-item>
+      <nz-breadcrumb-item>Timeline</nz-breadcrumb-item>
+    </nz-breadcrumb>
+    <div class="inner-content">
+      <div class="content-card-list">
+        <div *ngFor="let content of publicContents" class="ccard" nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+          <div nz-col class="gutter-row" [nzSpan]="24">
+            <div class="inner-box">
+              <div class="ccard-user">
+                <nz-avatar *ngIf="content.User.Avatar == ''" [nzShape]="'square'" [nzSize]="'small'" nzIcon="user" style="background-color:#87d068;"></nz-avatar>
+                <nz-avatar *ngIf="content.User.Avatar != ''" [nzShape]="'square'" [nzSize]="'small'" nzIcon="user" [nzSrc]="content.User.Avatar"></nz-avatar>
+                <!-- debug -->
+                <span *ngIf="!content.User.Name" nz-typography nzEllipsis class="ccard-username">
+                  Long Username test: Typography mixins are available for heading styles and for our type scale. They can be used within components or custom CSS. The same styles are also available as utilities. which requires no additional CSS.
+                </span>
+                <!-- end debug -->
+                <span *ngIf="content.User.Name" nz-typography nzEllipsis class="ccard-username">{{ content.User.Name }}</span>
+              </div>
+              <div class="ccard-title pt-1 pb-1">
+                <!-- debug -->
+                <a *ngIf="!content.Data.Name" nz-typography nzEllipsis [routerLink]="['/content', content.Data.ID]">
+                  Long Title test: Typography mixins are available for heading styles and for our type scale. They can be used within components or custom CSS. The same styles are also available as utilities. which requires no additional CSS.
+                </a>
+                <!-- end debug -->
+                <a *ngIf="content.Data.Name" nz-typography nzEllipsis>
+                  {{content.Data.Name }}
+                </a>
+              </div>
+              <p nz-typography nzEllipsis [nzEllipsisRows]="3">
+                {{ content.Data.Detail }}
+              </p>
+              <span>{{ content.Data.PublishDate | date:'yyyy-MM-dd HH:mm:ss' }}</span> ·
+              <i nz-icon nzType="like" nzTheme="outline"></i>
+              <span>{{ content.Data.LikeNum }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer> -->
+</div>
