--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,21 @@
-<div class="col-md-6 col-md-offset-3">
-  <h2>Login</h2>
-  <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
-      <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
+<div class="mainContainer">
+  <h1>Login</h1>
+  <div class="frameContainer">
+    <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
+      <div class="formGroup" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
           <label for="username">Username</label>
           <input type="text" class="form-control" name="username" [(ngModel)]="model.username" #username="ngModel" required />
           <div *ngIf="f.submitted && !username.valid" class="help-block">Username is required</div>
       </div>
-      <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
+      <div class="formGroup" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
           <label for="password">Password</label>
           <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" required />
           <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
       </div>
-      <div class="form-group">
+      <div class="formGroup">
           <button [disabled]="loading" class="btn btn-primary">Login</button>
           <a [routerLink]="['/register']" class="btn btn-link">Create account</a>
       </div>
   </form>
+  </div>
 </div>
