--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,35 @@
 .mainContainer {
+  padding: 50px;
   width: 600px;
-  height: 100%;
   margin: 0 auto;
+  h1 {
+    font-size: 36px;
+    width: 120px;
+    margin: 0 auto;
+  }
+  .frameContainer {
+    margin-top: 50px;
+    .formGroup {
+      width: 250px;
+      margin: 0 auto;
+      .username, .password {
+        width: 250px;
+        height: 36px;
+      }
+      .username, .password {
+        margin: 10px 0;
+      }
+      .registerLabel {
+        line-height: 35px;
+        font-size: 16px;
+      }
+      .loginBtn {
+        width: 100px;
+        float: right;
+      }
+      .tips {
+        color: red;
+      }
+    }
+  }
 }
