--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,24 +1,52 @@
-<div class="col-md-6 col-md-offset-3">
-  <h2>Register</h2>
-  <form name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
+<div class="mainContainer">
+  <h1>Register</h1>
+  <div class="frameContainer">
+    <form name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
+      <div class="formGroup" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
+        <nz-input-group nzPrefixIcon="mail" class="email">
+          <input nz-input type="text" name="email" placeholder="Email" [(ngModel)]="model.email" #email="ngModel" required/>
+        </nz-input-group>
+        <div *ngIf="f.submitted && !email.valid" class="tips">Email is required</div>
+      </div>
+      <div class="formGroup" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
+        <nz-input-group nzPrefixIcon="user" class="username">
+          <input nz-input type="text" name="userName" placeholder="Username" [(ngModel)]="model.username" #username="ngModel" required/>
+        </nz-input-group>
+        <div *ngIf="f.submitted && !username.valid" class="tips">Username is required</div>
+      </div>
+      <div class="formGroup" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
+        <nz-input-group nzPrefixIcon="lock" class="password">
+          <input nz-input type="password" name="password" placeholder="Password" [(ngModel)]="model.password" #password="ngModel" required/>
+        </nz-input-group>
+        <div *ngIf="f.submitted && !password.valid" class="tips">Password is required</div>
+      </div>
+      <div class="formGroup">
+        <span class="loginLabel"><a [routerLink]="['/login']">Sign in instead</a></span>
+        <button nz-button nzType="primary" class="registerBtn" [disabled]="loading">
+          Register
+        </button>
+      </div>
+    </form>
+  </div>
+  <!-- <form name="form" (ngSubmit)="f.form.valid && register()" #f="ngForm" novalidate>
       <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !email.valid }">
           <label for="email">Email</label>
           <input type="text" class="form-control" name="email" [(ngModel)]="user.email" #email="ngModel" required />
-          <div *ngIf="f.submitted && !email.valid" class="help-block">First Name is required</div>
+          <div *ngIf="f.submitted && !email.valid" class="tips">First Name is required</div>
       </div>
       <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
           <label for="username">Username</label>
           <input type="text" class="form-control" name="username" [(ngModel)]="user.username" #username="ngModel" required />
-          <div *ngIf="f.submitted && !username.valid" class="help-block">Username is required</div>
+          <div *ngIf="f.submitted && !username.valid" class="tips">Username is required</div>
       </div>
       <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
           <label for="password">Password</label>
           <input type="password" class="form-control" name="password" [(ngModel)]="user.password" #password="ngModel" required />
-          <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
+          <div *ngIf="f.submitted && !password.valid" class="tips">Password is required</div>
       </div>
       <div class="form-group">
           <button [disabled]="loading" class="btn btn-primary">Register</button>
           <a [routerLink]="['/login']" class="btn btn-link">Sign in instead</a>
       </div>
-  </form>
+  </form> -->
 </div>
