--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,17 +1,34 @@
 <div class="mainContainer">
   <div class="userInfoContainer">
-    <div class="avator" *ngIf="userInfoData">
-      <img src="{{userInfoData.Info.Avator}}">
+    <div class="avatar" *ngIf="userInfoData">
+    <!-- <div class="avatar"> -->
+      <!-- <img src="https://cdn.jsdelivr.net/gh/sherryjw/StaticResource@master/image/404.jpg" style="width:100px; height:100px; border-radius:50%; border:1px solid #484848"> -->
+      <img src="{{userInfoData.Info.Avatar}}" style="width:100px; height:100px; border-radius:50%; border:1px solid #484848">
     </div>
     <div class="userInfo" *ngIf="userInfoData">
-      <p class="name">Name: {{userInfoData.Info.Name}}</p>
-      <p class="bio">Bio: {{userInfoData.Info.Bio}}</p>
+    <!-- <div class="userInfo"> -->
+      <!-- <p class="name" align="center">Test</p>
+      <p class="bio">这是一段简介这是一段简介这是一段简介这是一段简介</p>
+      <p class="gender"><i nz-icon [nzType]="'woman'"></i></p>
+      <p class="id">ID: 5fd8e8a5c93c73399fa8d448</p>
+      <p class="email">Email: 133465212@qq.com</p> -->
+
+      <p class="name" align="center">{{userInfoData.Info.Name}}</p>
+      <p class="bio">{{userInfoData.Info.Bio}}</p>
+      <p class="gender" *ngIf="isBoy()"><i nz-icon [nzType]="'man'"></i></p>
+      <p class="gender" *ngIf="!isBoy()"><i nz-icon [nzType]="'woman'"></i></p>
       <p class="id">ID: {{userInfoData.ID}}</p>
       <p class="email">Email: {{userInfoData.Email}}</p>
-      <p class="gender">Gender: {{userInfoData.Info.Gender}}</p>
     </div>
   </div>
   <div class="blogListContainer">
-    2
+    <nz-tabset>
+      <nz-tab nzTitle="Blog List">
+        Content of Tab Pane 1
+      </nz-tab>
+      <nz-tab nzTitle="Notification Center">
+        Content of Tab Pane 2
+      </nz-tab>
+    </nz-tabset>
   </div>
 </div>
