--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -6,6 +6,11 @@
   width: auto !important;
 }
 
+.like-icon-red {
+  width: auto !important;
+  color: red !important;
+}
+
 .pt-1 {
   padding-top: 8px;
 }
