--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,24 +1,72 @@
 <div class="layout">
   <div class="layout-content">
-    <div class="inner-content pl-3 pr-3">
-      <div class="pt-2 pl-3">
+    <div class="inner-content pt-3">
+      <div class="pl-1">
         <nz-breadcrumb>
           <nz-breadcrumb-item>Home</nz-breadcrumb-item>
           <nz-breadcrumb-item>Timeline</nz-breadcrumb-item>
         </nz-breadcrumb>
       </div>
-      <div class="content-card-list">
+      <div class="pt-2 pb-3">
+        <div *ngFor="let content of publicContents; let i=index" nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
+          <div nz-col class="gutter-row content-card" [nzSpan]="24">
+            <nz-card [nzActions]="[actionLike, actionEllipsis]">
+              <nz-card-meta [nzTitle]="titleTemplate" [nzDescription]="content.Data.PublishDate | date:'yyyy-MM-dd HH:mm:ss'" [nzAvatar]="avatarTemplate"></nz-card-meta>
+              <div class="content-card-body pl-1 pr-1" [routerLink]="['/content', content.Data.ID]">
+                <p class="pt-2">
+                  {{ content.Data.Detail }}
+                </p>
+                <div class="tag-container">
+                  <nz-space>
+                    <nz-space-item *ngFor="let tag of content.Data.Tag">
+                      <nz-tag nzMode="default">
+                        {{ sliceTagName(addHashTag(tag)) }}
+                      </nz-tag>
+                    </nz-space-item>
+                  </nz-space>
+                </div>
+              </div>
+            </nz-card>
+            <ng-template #titleTemplate>
+              <span class="content-card-user-name" [routerLink]="['/user', content.Data.OwnID]">
+                {{content.User.Name}}
+              </span>
+            </ng-template>
+            <ng-template #avatarTemplate>
+              <!-- <i nz-icon [nzType]="'smile'" [nzTheme]="'outline'" style="width: 32px; height: 32px;"></i> -->
+              <div *ngIf="!content.User.Avatar || content.User.Avatar ==''" class="content-card-user-avatar" [routerLink]="['/user', content.Data.OwnID]">
+                <nz-avatar nzText="U" style="background-color: #4b769e;"></nz-avatar>
+              </div>
+              <div *ngIf="content.User.Avatar && content.User.Avatar !=''" class="content-card-user-avatar" [routerLink]="['/user', content.Data.OwnID]">
+                <nz-avatar [nzSrc]="content.User.Avatar" ></nz-avatar>
+              </div>
+            </ng-template>
+            <ng-template #actionLike>
+              <div *ngIf="content.isLiked" [class.like-icon-red]="true" (click)="unlikeContent(content.Data.ID, i)">
+                <i class="like-icon" nz-icon nzType="like" nzTheme="outline"></i>
+                <span class="like-num pl-1">{{content.Data.LikeNum}}</span>
+              </div>
+              <div *ngIf="!content.isLiked" (click)="likeContent(content.Data.ID, i)">
+                <i class="like-icon" nz-icon nzType="like" nzTheme="outline"></i>
+                <span class="like-num pl-1">{{content.Data.LikeNum}}</span>
+              </div>
+            </ng-template>
+            <ng-template #actionEllipsis>
+              <i nz-icon nzType="ellipsis" [routerLink]="['/content', content.Data.ID]"></i>
+            </ng-template>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="content-card-list">
         <div *ngFor="let content of publicContents" class="ccard" nz-row [nzGutter]="{ xs: 8, sm: 16, md: 24, lg: 32 }">
           <div nz-col class="gutter-row" [nzSpan]="24">
             <div class="inner-box">
               <div class="ccard-user pt-2 pb-2">
                 <nz-avatar *ngIf="!content.User.Avatar || content.User.Avatar == ''" [nzSize]="'small'" nzText="U" style="background-color: #4b769e;"></nz-avatar>
                 <nz-avatar *ngIf="content.User.Avatar && content.User.Avatar != ''" [nzSize]="'small'" nzIcon="user" [nzSrc]="content.User.Avatar"></nz-avatar>
-                <!-- debug -->
                 <span *ngIf="!content.User.Name" nz-typography nzEllipsis class="ccard-username">
                   Long Username test: Typography mixins are available for heading styles and for our type scale. They can be used within components or custom CSS. The same styles are also available as utilities. which requires no additional CSS.
                 </span>
-                <!-- end debug -->
                 <span *ngIf="content.User.Name" nz-typography nzEllipsis class="ccard-username">{{ content.User.Name }}</span>
               </div>
               <p nz-typography nzEllipsis [nzEllipsisRows]="3">
@@ -30,7 +78,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <!-- <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer> -->
