feat(home): 增加广场页功能
增加点击用户头像/姓名进入用户页

增加当前登录用户对当前内容点赞状态判断

调整样式

todo: 分页获取内容，发布博文功能，测试发布博文、点赞、取消点赞

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,8 +11,26 @@
   min-height: 0;
 }
 
+.inner-content {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .content-card-list {
   margin: 24px 24px;
+}
+
+.content-card-body:hover {
+  background-color: #faf8f8;
+  cursor: pointer;
+}
+
+.content-card-user-avatar:hover {
+  cursor: pointer;
+}
+
+.content-card-user-name:hover {
+  cursor: pointer;
 }
 
 .ccard {
@@ -39,6 +57,19 @@
 .ccard-title {
   font-size: 20px;
   font-weight: 600;
+}
+
+.like-num {
+  display: inline-block;
+}
+
+.like-icon {
+  width: auto !important;
+}
+
+.like-icon-red {
+  width: auto !important;
+  color: red !important;
 }
 
 .pt-1 {
