--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -3,9 +3,11 @@
   margin: 32px auto;
   display: grid;
   grid-template-columns: 28% 70%;
+  grid-template-rows: 600px;
   grid-template-areas: 'userInfoContainer blogListContainer';
   grid-column-gap: 16px;
   .userInfoContainer {
+    box-shadow: 0 2px 4px 0 #9dadbc;
     background-color: #fff;
     grid-area: userInfoContainer;
     padding: 50px;
@@ -25,7 +27,52 @@
     }
   }
   .blogListContainer {
+    box-shadow: 0 2px 4px 0 #9dadbc;
+    padding: 50px;
     background-color: #fff;
     grid-area: blogListContainer;
+    .notificationContainer {
+      .notificationCard {
+        padding: 25px 25px 40px 25px;
+        margin: 20px auto;
+        width: 90%;
+        box-shadow: 0 2px 4px 0 #bfbfbf;
+        .targetUser {
+          color: gray;
+        }
+        .createTime {
+          color: gray;
+          float: right;
+        }
+      }
+    }
+    .blogContainer {
+      .blogCard {
+        padding: 25px 25px 40px 25px;
+        margin: 20px auto;
+        width: 90%;
+        box-shadow: 0 2px 4px 0 #bfbfbf;
+      }
+    }
+    .notificationContainer, .blogContainer {
+      height: 420px;
+      overflow-y: scroll;
+      &::-webkit-scrollbar {
+        width: 4px;
+        height: 0px;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 5px;
+        box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2);
+        -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2);
+        background: rgba(157, 173, 188, 0.5);
+      }
+      &::-webkit-scrollbar-track {
+        box-shadow: 0;
+        -webkit-box-shadow: 0;
+        border-radius: 5px;
+        background: #fff;
+      }
+    }
   }
 }
