--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -72,6 +72,19 @@
   color: red !important;
 }
 
+.page-button {
+  text-align: center;
+}
+
+[nz-button] {
+  margin-right: 8px;
+  margin-bottom: 12px;
+}
+
+nz-button-group [nz-button] {
+  margin-right: 0;
+}
+
 .pt-1 {
   padding-top: 8px;
 }
