fix(home | content): 修复 like/unlike bugs
修复 like/unlike 后页面状态不更新

增加错误检查

增加权限提醒

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
           <a (click)="jumpToUser()" routerLinkActive="active">
             <span>这里是一个用户头像</span>
           </a>
-          <a (click)="logOut()" routerLinkActive="active">
+          <a (click)="logOut()" routerLinkActive="active" [routerLink]="['home']">
             <span>退出登录</span>
           </a>
         </div>
