Update: Notification Empty-test

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -30,7 +30,9 @@
           </div>
         </div>
         <div class="notificationContainer" *ngIf="!userNotificationData || userNotificationData.Notification.length==0">
-          <nz-empty></nz-empty>
+          <nz-empty [nzNotFoundContent]="notFoundContent">
+            <ng-template #notFoundContent><span> 暂无通知 </span></ng-template>
+          </nz-empty>
         </div>
       </nz-tab>
     </nz-tabset>
