--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -34,7 +34,7 @@
             <p class="createTime">{{notification.Data.CreateTime}}</p>
           </div>
         </div>
-        <div class="notificationContainer" *ngIf="userNotificationData.Notification.length==0">
+        <div class="notificationContainer" *ngIf="userNotificationData && userNotificationData.Notification.length==0">
           <nz-empty [nzNotFoundContent]="notFoundContent">
             <ng-template #notFoundContent><span> 暂无通知 </span></ng-template>
           </nz-empty>
