--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -27,7 +27,7 @@
         </div> -->
       </nz-tab>
       <nz-tab nzTitle="Notification Center">
-        <div class="notificationContainer" *ngIf="userNotificationData">
+        <div class="notificationContainer">
           <div class="notificationCard" *ngFor="let notification of userNotificationData.Notification">
             <p class="targetUser">{{notification.User.Name}}：</p>
             <p class="content">{{notification.Data.Content}}</p>
