--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -16,6 +16,10 @@
       margin: 0 auto;
     }
     .userInfo {
+      .editName {
+        color: #bfbfbf;
+        width: 15px;
+      }
       .name {
         margin-top: 20px;
         font-size: 24px;
