--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -34,11 +34,12 @@
         </div>
       </nz-tab>
       <nz-tab nzTitle="Notification Center">
-        <div class="notificationContainer">
+        <div class="notificationContainer" *ngIf="userNotifications">
           <div class="notificationCard" *ngFor="let notification of userNotifications">
             <p class="targetUser">{{notification.User.Name}}：</p>
             <p class="content">{{notification.Notification.Content}}</p>
             <p class="createTime">{{notification.Notification.CreateTime}}</p>
+            <i nz-icon [nzType]="'delete'" class="delNotification"></i>
           </div>
         </div>
         <div class="notificationContainer" *ngIf="userNotifications && userNotifications.length==0">
