--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -21,7 +21,7 @@
       </div>
     </div> -->
     <nz-tabset>
-      <nz-tab nzTitle="Blog List">
+      <!-- <nz-tab nzTitle="Blog List">
         <div class="blogContainer" *ngIf="userBlogData">
           <div class="blogCard" *ngFor="let blog of userBlogData">
             <p>{{ blog.ID }}</p>
@@ -32,7 +32,7 @@
             <ng-template #notFoundContent><span> 暂无博客 </span></ng-template>
           </nz-empty>
         </div>
-      </nz-tab>
+      </nz-tab> -->
       <nz-tab nzTitle="Notification Center">
         <div class="notificationContainer" *ngIf="userNotifications">
           <div class="notificationCard" *ngFor="let notification of userNotifications">
